@@ -7,8 +7,6 @@ Needed now:
 
 2nd priority:
 
-  * joins could use additional parameters so you could add to the
-    where clause, and order, offset, limit.
   * array fetch (preliminary version done, needs some way of
     specifying joins other than literal sql, and dealing with all-null
     objects).
